k3s-manifests/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---

apiVersion: v1
kind: Namespace
metadata:
  name: satisfactory

---

apiVersion: v1
kind: Namespace
metadata:
  name: nostalgiagame

---

apiVersion: v1
kind: Namespace
metadata:
  name: registry

---

apiVersion: v1
kind: Namespace
metadata:
  name: dig

---

apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system

---

apiVersion: v1
kind: Namespace
metadata:
  name: ai

---

apiVersion: v1
kind: Namespace
metadata:
  name: plex

---
