k3s-manifests/jellyfin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: media
          hostPath:
            path: /storage/seagate-1tb/media
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: plex
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 30096
