k3s-manifests/plex.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: linuxserver/plex:latest
          ports:
            - name: http
              containerPort: 32400
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: config
          hostPath:
            path: /storage/seagate-1tb/plex-config
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /storage/seagate-1tb/media
            type: DirectoryOrCreate
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
    - name: http
      protocol: TCP
      port: 32400
      targetPort: 32400
      nodePort: 32400
