k3s-manifests/qbittorrent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: bt-tcp
            - containerPort: 6881
              name: bt-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /storage/seagate-1tb/qbittorrent-config
            type: DirectoryOrCreate
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: plex
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - name: webui
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
